--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -11,16 +11,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {<% if (installBootstrap === true) { %>
-    "bootstrap": "^4.1.3",
-    "popper.js": "^1.14.4",<% } %>
+    "bootstrap": "^4.2.1",
+    "popper.js": "^1.14.6",<% } %>
     "jquery": "^3.3.1",
     "susy": "^3.0.5",
     "vanilla-text-mask": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "ansi-colors": "^3.1.0",
-    "autoprefixer": "^9.2.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "ansi-colors": "^3.2.3",
+    "autoprefixer": "^9.4.3",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -30,17 +31,17 @@
     "babel-runtime": "^6.26.0",
     "browser-sync": "^2.26.3",
     "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.5",
+    "cssnano": "^4.1.8",
     "del": "^3.0.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-formatter-pretty": "^1.3.0",
+    "eslint-formatter-pretty": "^2.0.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
-    "fancy-log": "^1.3.2",
+    "fancy-log": "^1.3.3",
     "fs": "^0.0.1-security",
     "global": "^4.3.2",
     "gulp": "^3.9.1",
@@ -49,16 +50,16 @@
     "gulp-front-matter": "^1.3.0",
     "gulp-html-prettify": "^0.0.1",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-include": "^2.3.1",
-    "gulp-inject": "^4.3.2",
+    "gulp-inject": "^5.0.2",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-nunjucks-render": "^2.2.2",
-    "gulp-plumber": "^1.2.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-prettify": "^0.5.0",
-    "gulp-real-favicon": "^0.3.0",
+    "gulp-real-favicon": "^0.3.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
@@ -70,12 +71,12 @@
     "minimist": "^1.2.0",
     "path": "^0.12.7",
     "postcss-easings": "^2.0.0",
-    "require-dir": "^1.1.0",
+    "require-dir": "^1.2.0",
     "run-sequence": "^2.2.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.21.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.28.3",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
-    "webpack-stream": "^5.1.1"
+    "webpack-stream": "^5.2.1"
   }
 }
