--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-vector",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Yeoman generator for creating static sites (gulp, webpack, nunjucks, scss, svg and png sprites, favicon generator)",
   "homepage": "https://github.com/bybelov/generator-vector",
   "author": {
@@ -24,25 +24,25 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.7.0",
-    "yeoman-assert": "^3.1.0",
-    "coveralls": "^3.0.0",
-    "eslint": "^5.7.0",
-    "prettier": "^1.11.1",
-    "husky": "^1.1.2",
-    "lint-staged": "^7.2.2",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-config-xo": "^0.25.0",
-    "jest": "^23.5.0"
+    "yeoman-test": "^1.9.1",
+    "yeoman-assert": "^3.1.1",
+    "coveralls": "^3.0.2",
+    "eslint": "^5.11.1",
+    "prettier": "^1.15.3",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-config-xo": "^0.25.1",
+    "jest": "^23.6.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "^3.1.1",
-    "chalk": "^2.1.0",
-    "yosay": "^2.0.1"
+    "yeoman-generator": "^3.2.0",
+    "chalk": "^2.4.1",
+    "yosay": "^2.0.2"
   },
   "jest": {
     "testEnvironment": "node"
@@ -81,9 +81,13 @@
   },
   "scripts": {
     "pretest": "eslint .",
-    "precommit": "lint-staged",
     "test": "jest"
   },
   "repository": "bybelov/generator-vector",
-  "license": "MIT"
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  }
 }
