--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -11,38 +11,39 @@
   "author": "",
   "license": "MIT",
   "dependencies": {<% if (installBootstrap === true) { %>
-    "bootstrap": "^4.2.1",
-    "popper.js": "^1.14.6",<% } %>
+    "bootstrap": "^4.3.1",
+    "popper.js": "^1.14.7",<% } %>
     "jquery": "^3.3.1",
     "susy": "^3.0.5",
     "vanilla-text-mask": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "ansi-colors": "^3.2.3",
-    "autoprefixer": "^9.4.3",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "ansi-colors": "^3.2.4",
+    "autoprefixer": "^9.5.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "browser-sync": "^2.26.3",
+    "critical": "^1.3.4",
     "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.8",
-    "del": "^3.0.0",
-    "eslint": "^5.11.1",
+    "cssnano": "^4.1.10",
+    "del": "^4.0.0",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-formatter-pretty": "^2.0.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-formatter-pretty": "^2.1.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
     "fancy-log": "^1.3.3",
-    "fs": "^0.0.1-security",
+    "fs": "^0.0.2",
     "global": "^4.3.2",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.2.0",
@@ -55,17 +56,17 @@
     "gulp-inject": "^5.0.2",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
-    "gulp-nunjucks-render": "^2.2.2",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-prettify": "^0.5.0",
-    "gulp-real-favicon": "^0.3.1",
+    "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.4",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^2.1.0",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "gulp.spritesmith": "^6.9.0",
     "minimist": "^1.2.0",
@@ -73,10 +74,10 @@
     "postcss-easings": "^2.0.0",
     "require-dir": "^1.2.0",
     "run-sequence": "^2.2.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.28.3",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.1.2",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.3.0",
     "webpack-stream": "^5.2.1"
   }
 }
