--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -4,6 +4,7 @@
   "description": "<%= projectDescription %>",
   "scripts": {
     "build": "gulp build --production",
+    "start": "gulp",
     "dev": "gulp"
   },
   "main": "gulpfile.js",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "@babel/register": "^7.4.0",
     "ansi-colors": "^3.2.4",
     "autoprefixer": "^9.5.0",
     "babel-core": "^6.26.3",
@@ -33,8 +35,8 @@
     "critical": "^1.3.4",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
-    "del": "^4.0.0",
-    "eslint": "^5.15.3",
+    "del": "^4.1.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-formatter-pretty": "^2.1.1",
@@ -45,7 +47,7 @@
     "fancy-log": "^1.3.3",
     "fs": "^0.0.2",
     "global": "^4.3.2",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-data": "^1.3.1",
     "gulp-front-matter": "^1.3.0",
@@ -60,7 +62,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-prettify": "^0.5.0",
-    "gulp-real-favicon": "^0.3.2",
+    "favicons": "^5.3.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
@@ -69,7 +71,6 @@
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "gulp.spritesmith": "^6.9.0",
-    "minimist": "^1.2.0",
     "path": "^0.12.7",
     "postcss-easings": "^2.0.0",
     "require-dir": "^1.2.0",
@@ -78,6 +79,7 @@
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.0",
-    "webpack-stream": "^5.2.1"
+    "webpack-stream": "^5.2.1",
+    "yargs": "^13.2.2"
   }
 }
