--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -71,6 +71,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "gulp.spritesmith": "^6.10.1",
+    "lodash": "^4.17.15",
     "path": "^0.12.7",
     "postcss-easings": "^2.0.0",
     "require-dir": "^1.2.0",
