--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.16.0",
+    "popper.js": "^1.16.1",
     "vanilla-text-mask": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/register": "^7.7.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.8.3",
     "ansi-colors": "^4.1.1",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.7.4",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -35,16 +35,16 @@
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-formatter-pretty": "^3.0.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.1",
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
     "fancy-log": "^1.3.3",
-    "favicons": "^5.5.0",
+    "favicons": "^6.0.0",
     "fs": "^0.0.2",
     "global": "^4.4.0",
     "gulp": "^4.0.2",
@@ -52,9 +52,9 @@
     "gulp-data": "^1.3.1",
     "gulp-html-prettify": "^0.0.1",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^6.2.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-include": "^2.4.1",
-    "gulp-inject": "^5.0.4",
+    "gulp-inject": "^5.0.5",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-nunjucks-render": "^2.2.3",
@@ -73,10 +73,11 @@
     "postcss-easings": "^2.0.0",
     "require-dir": "^1.2.0",
     "run-sequence": "^2.2.1",
-    "webpack": "^4.41.2",
+    "sort-stream": "^1.0.1",
+    "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
+    "webpack-cli": "^3.3.11",
     "webpack-stream": "^5.2.1",
-    "yargs": "^15.0.2"
+    "yargs": "^15.1.0"
   }
 }
